댓글및 추천버튼 디자인수정

--- a/src/main/resources/static/post-detail.html
+++ b/src/main/resources/static/post-detail.html
@@ -30,12 +30,13 @@
                 <h2 class="comments-title">댓글 <span id="commentCount">0</span></h2>
 
                 <form id="commentForm" class="hidden">
-                    <div class="form-group">
+                    <div class="comment-input-container">
                         <textarea id="commentContent" class="form-textarea" placeholder="댓글을 입력하세요" required></textarea>
-                    </div>
-                    <div style="display: flex; justify-content: flex-end;">
-                        <button type="submit" class="icon-btn primary" aria-label="댓글 작성"><i
-                                class="fas fa-paper-plane"></i></button>
+                        <div class="comment-submit-area">
+                            <button type="submit" class="icon-btn primary" aria-label="댓글 작성">
+                                <i class="fas fa-paper-plane"></i>
+                            </button>
+                        </div>
                     </div>
                 </form>
 
