--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -405,8 +405,10 @@
                                     <span>${timeString}</span>
                                 </div>
                                 <div class="post-meta-right">
-                                    <span class="best-like-count"><i class="fas fa-thumbs-up"></i> ${post.likeCount || 0}</span>
+                                    <span><i class="fas fa-thumbs-up"></i> ${formatNumber(post.likeCount || 0)}</span>
+                                    <span><i class="fas fa-thumbs-down"></i> ${formatNumber(post.dislikeCount || 0)}</span>
                                     <span><i class="fas fa-eye"></i> ${formatNumber(post.viewCount || 0)}</span>
+                                    <span><i class="fas fa-comment-dots"></i> ${formatNumber(post.commentCount || 0)}</span>
                                 </div>
                             </div>
                         </div>
