--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -45,7 +45,7 @@
             <div class="form-group">
                 <label class="form-label" for="nickname">별명</label>
                 <div style="display: flex; gap: 8px;">
-                    <input type="text" id="nickname" class="form-input" placeholder="2-10자 사이의 별명을 입력하세요 변경불가" required
+                    <input type="text" id="nickname" class="form-input" placeholder="2-10자 [변경불가]" required
                         minlength="2" maxlength="10" style="flex: 1;">
                     <button type="button" class="btn btn-secondary" onclick="checkNickname()"
                         style="white-space: nowrap;">
