--- a/src/main/resources/static/post-form.html
+++ b/src/main/resources/static/post-form.html
@@ -149,9 +149,22 @@
             } else {
                 // New post: Set title based on boardId
                 let boardName = '자유게시판';
-                if (boardId === 'anonymous') boardName = 'BLIND';
-                else if (boardId === 'jobs') boardName = '구인구직';
+                let placeholderText = '자유롭게 이야기를 나누어 보세요. (욕설 및 비방 금지)';
+
+                if (boardId === 'anonymous') {
+                    boardName = 'BLIND';
+                    placeholderText = "이 게시판은 블라인드 형식의 게시판 입니다.\n\n" +
+                        "촬영장 안팎의 부조리를 고발하는 목적입니다.\n\n" +
+                        "본인이 설정한 닉네임이 아닌 게시물 단위로 랜덤한 닉네임을 배정받아 익명으로 사용할 수 있는 게시판입니다.\n" +
+                        "근거없는 비방 욕설은 삼가해주세요";
+                }
+                else if (boardId === 'jobs') {
+                    boardName = '구인구직';
+                    placeholderText = "구인/구직 내용을 상세히 작성해주세요.\n예) 업무 내용, 자격 요건, 근무 조건 등";
+                }
+
                 document.getElementById('formTitle').textContent = `${boardName} 글쓰기`;
+                document.getElementById('content').placeholder = placeholderText;
 
                 // Restore draft if available
                 const savedTitle = localStorage.getItem(DRAFT_TITLE_KEY);
